update comments to be consistent across frameworks

--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -51,12 +51,12 @@ export default function Page() {
   const [code, setCode] = React.useState("");
   const router = useRouter();
 
-  // This function will handle the user submitting their email and passowrd
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e: React.FormEvent) => {
     e.preventDefault();
     if (!isLoaded) return;
     
-    // Start the Sign Up process using the email and password provided
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress, password
@@ -152,14 +152,14 @@ export default function SignUpForm() {
   const [code, setCode] = useState("");
   const router = useRouter();
 
-  // This function will handle the user submitting their email and passowrd
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
-    // Start the Sign Up process using the email and password provided
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
@@ -256,58 +256,70 @@ export default function SignUpForm() {
   const { isLoaded, signUp, setActive } = useSignUp();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  const [pendingVerification, setPendingVerification] = useState(false);
+  const [verifying, setVerifying] = React.useState(false);
   const [code, setCode] = useState("");
-  // start the sign up process.
+
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async (e) => {
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
+
       if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
-         or if the user needs to complete more steps.*/
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
         console.log(JSON.stringify(completeSignUp, null, 2));
       }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
+        // Handle your own logic here, like redirecting to a new page if needed.
       }
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
   return (
     <div>
-      {!pendingVerification && (
+      {!verifying && (
         <form>
           <div>
             <label htmlFor="email">Email</label>
@@ -320,7 +332,7 @@ export default function SignUpForm() {
           <button onClick={handleSubmit}>Sign up</button>
         </form>
       )}
-      {pendingVerification && (
+      {verifying && (
         <div>
           <form>
             <input
@@ -328,7 +340,7 @@ export default function SignUpForm() {
               placeholder="Code..."
               onChange={(e) => setCode(e.target.value)}
             />
-            <button onClick={onPressVerify}>
+            <button onClick={handleVerify}>
               Verify Email
             </button>
           </form>
@@ -349,59 +361,71 @@ export default function SignUpForm() {
   const { isLoaded, signUp, setActive } = useSignUp();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  const [pendingVerification, setPendingVerification] = useState(false);
+  const [verifying, setVerifying] = React.useState(false);
   const [code, setCode] = useState("");
-  // start the sign up process.
+ 
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async (e) => {
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
+
       if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
          or if the user needs to complete more steps.*/
         console.log(JSON.stringify(completeSignUp, null, 2));
       }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
         // Handle your own logic here, like redirecting to a new page if needed.
       }
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
   return (
     <div>
-      {!pendingVerification && (
+      {!verifying && (
         <form>
           <div>
             <label htmlFor="email">Email</label>
@@ -414,7 +438,7 @@ export default function SignUpForm() {
           <button onClick={handleSubmit}>Sign up</button>
         </form>
       )}
-      {pendingVerification && (
+      {verifying && (
         <div>
           <form>
             <input
@@ -422,7 +446,7 @@ export default function SignUpForm() {
               placeholder="Code..."
               onChange={(e) => setCode(e.target.value)}
             />
-            <button onClick={onPressVerify}>
+            <button onClick={handleVerify}>
               Verify Email
             </button>
           </form>
@@ -445,60 +469,72 @@ export default function SignUpForm() {
   const { isLoaded, signUp, setActive } = useSignUp();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  const [pendingVerification, setPendingVerification] = useState(false);
+  const [verifying, setVerifying] = React.useState(false);
   const [code, setCode] = useState("");
   const router = useRouter();
-  // start the sign up process.
+  
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async (e) => {
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
+
       if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
-         or if the user needs to complete more steps.*/
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
         console.log(JSON.stringify(completeSignUp, null, 2));
       }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
+        // Redirect the user to a post sign-up route
         router.push("/");
       }
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
   return (
     <div>
-      {!pendingVerification && (
+      {!verifying && (
         <form>
           <div>
             <label htmlFor="email">Email</label>
@@ -511,7 +547,7 @@ export default function SignUpForm() {
           <button onClick={handleSubmit}>Sign up</button>
         </form>
       )}
-      {pendingVerification && (
+      {verifying && (
         <div>
           <form>
             <input
@@ -519,7 +555,7 @@ export default function SignUpForm() {
               placeholder="Code..."
               onChange={(e) => setCode(e.target.value)}
             />
-            <button onClick={onPressVerify}>
+            <button onClick={handleVerify}>
               Verify Email
             </button>
           </form>
@@ -542,51 +578,68 @@ export default function SignUpScreen() {
 
   const [emailAddress, setEmailAddress] = React.useState("");
   const [password, setPassword] = React.useState("");
-  const [pendingVerification, setPendingVerification] = React.useState(false);
+  const [verifying, setVerifying] = React.useState(false);
   const [code, setCode] = React.useState("");
 
-  // start the sign up process.
+  // This function will handle the user submitting their email and password
   const onSignUpPress = async () => {
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async () => {
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async () => {
     if (!isLoaded) {
       return;
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
 
-      await setActive({ session: completeSignUp.createdSessionId });
+     if (completeSignUp.status !== "complete") {
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
+        console.log(JSON.stringify(completeSignUp, null, 2));
+      }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
+      if (completeSignUp.status === "complete") {
+        await setActive({ session: completeSignUp.createdSessionId });
+        // Handle your own logic here, like redirecting to a new page if needed.
+      }
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
   return (
     <View>
-      {!pendingVerification && (
+      {!verifying && (
         <View>
           <View>
             <TextInput
@@ -612,7 +665,7 @@ export default function SignUpScreen() {
           </TouchableOpacity>
         </View>
       )}
-      {pendingVerification && (
+      {verifying && (
         <View>
           <View>
             <TextInput
@@ -621,7 +674,7 @@ export default function SignUpScreen() {
               onChangeText={(code) => setCode(code)}
             />
           </View>
-          <TouchableOpacity onPress={onPressVerify}>
+          <TouchableOpacity onPress={handleVerify}>
             <Text>Verify Email</Text>
           </TouchableOpacity>
         </View>
@@ -733,7 +786,7 @@ export default function SignInForm() {
       return;
     }
 
-    // Start the Sign In process using the email and password provided
+    // Start the sign-in process using the email and password provided
     try {
       const completeSignIn = await signIn.create({
         identifier: email,
@@ -741,18 +794,17 @@ export default function SignInForm() {
       });
 
       if (completeSignIn.status !== 'complete') {
-        // The status can also be `needs_factor_on'm 'needs_factor_two' or 'needs_identifier'
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
         // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
         console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
       if (completeSignIn.status === 'complete') {
-        // If complete, user exists and porivded password match -- set session active
+        // If complete, user exists and provided password match -- set session active
         await setActive({ session: completeSignIn.createdSessionId });
         // Redirect the user to a post sign-in route
         router.push('/');
       }
-
     } catch (err: any) {
       // This can return an array of errors.
       // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
@@ -798,7 +850,7 @@ export default function SignInForm() {
       return;
     }
 
-    // Start the Sign In process using the email and password provided
+    // Start the sign-in process using the email and password provided
     try {
       const result = await signIn.create({
         identifier: emailAddress,
@@ -806,13 +858,13 @@ export default function SignInForm() {
       });
 
       if (result.status === "complete") {
-        // If complete, user exists and porivded password match -- set session active
+        // If complete, user exists and provided password match -- set session active
         await setActive({ session: result.createdSessionId });
         // Redirect the user to a post sign-in route
         router.push("/")
       }
       else {
-        // The status can also be `needs_factor_on'm 'needs_factor_two' or 'needs_identifier'
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
         // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
         console.error(JSON.stringify(results, null, 2));
       }
@@ -853,32 +905,36 @@ export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  // start the sign In process.
+  
+  // Handle the submission of the sign-in form
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
-      const result = await signIn.create({
+      const completeSignIn = await signIn.create({
         identifier: emailAddress,
         password,
       });
 
-      if (result.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        // redirect the user how you see fit.
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
+      if (completeSignIn.status === "complete") {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+        // redirect the user how you see fit.
+      }
     } catch (err: any) { 
       // This can return an array of errors.
       // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
-      console.error("error", err.errors[0].longMessage)
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
@@ -910,33 +966,39 @@ export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  // start the sign In process.
+  
+  // Start the sign-in process using the email and password provided
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
-      const result = await signIn.create({
+      const completeSignIn = await signIn.create({
         identifier: emailAddress,
         password,
       });
 
-      if (result.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        // redirect the user how you see fit.
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
+      if (completeSignIn.status === 'complete') {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+      }
     } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
+  // Display a form to capture the user's email and password
   return (
     <div>
       <form>
@@ -966,33 +1028,41 @@ export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  // start the sign In process.
+  
+  // Handle the submission of the sign-in form
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
-      const result = await signIn.create({
+      const completeSignIn = await signIn.create({
         identifier: emailAddress,
         password,
       });
 
-      if (result.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        // redirect the user how you see fit.
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
+      if (completeSignIn.status === 'complete') {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+        // Redirect the user to a post sign-in route
+        router.push('/');
+      }
     } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
+  // Display a form to capture the user's email and password
   return (
     <div>
       <form>
@@ -1024,29 +1094,39 @@ export default function SignInScreen() {
   const [emailAddress, setEmailAddress] = React.useState("");
   const [password, setPassword] = React.useState("");
 
+  // Handle the submission of the sign-in form
   const onSignInPress = async () => {
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
       const completeSignIn = await signIn.create({
         identifier: emailAddress,
         password,
       });
-      if (completeSignIn.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        // redirect the user how you see fit.
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+      
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
+      if (completeSignIn.status === 'complete') {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+        // Redirect the user to a post sign-in route
+        router.push('/');
+      }
     } catch (err: any) {
-      console.log(err);
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
+
+  // Display a form to capture the user's email and password
   return (
     <View>
       <View>
