address new v5 updates

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -218,8 +218,8 @@ You can configure your proxy setup via environment variables or via properties.
         ```tsx filename="app.tsx"
           import Clerk from '@clerk/clerk-js';
 
-          const clerkFrontendApi = `{{pub_key}}`;
-          const clerk = new Clerk(clerkFrontendApi);
+          const clerkPublishableKey = `{{pub_key}}`;
+          const clerk = new Clerk(clerkPublishableKey);
           await clerk.load({
             proxyUrl: 'https://app.dev/__clerk',
           });
