--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -280,12 +280,12 @@ import {
   SignedIn,
 } from '@clerk/clerk-react';
 
-const frontendApi = process.env.REACT_APP_CLERK_FRONTEND_API;
+const publishableKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
 function App() {
   return (
     <Router>
-      <ClerkProvider frontendApi={frontendApi}>
+      <ClerkProvider publishableKey={publishableKey}>
         <Switch>
           {/* Root path shows sign up page. */}
           <Route 
@@ -673,12 +673,12 @@ import {
   useSignIn,
 } from "@clerk/clerk-react";
 
-const frontendApi = process.env.REACT_APP_CLERK_FRONTEND_API;
+const publishableKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
 
 function App() {
   return (
     <Router>
-      <ClerkProvider frontendApi={frontendApi}>
+      <ClerkProvider publishableKey={publishableKey}>
         <Routes>
           {/* Root path shows sign in page. */}
           <Route 
