--- a/docs/custom-flows/saml-connections.mdx
+++ b/docs/custom-flows/saml-connections.mdx
@@ -37,11 +37,13 @@ import {
   SignedOut
 } from "@clerk/clerk-react";
 
+const publishableKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+
 function App() {
   return (
     //  react-router-dom requires your app to be wrapped with a Router
     <BrowserRouter>
-      <ClerkProvider frontendApi="{{fapi}}">
+      <ClerkProvider publishableKey={publishableKey}>
         <Switch>
           {/* Define a / route that displays the OAuth buttons */}
           <Route path="/">
