--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -105,7 +105,7 @@ When working with frontend (client-side) code, you can easily detect impersonate
 <CodeBlockTabs options={["Next.js", "React", "JavaScript"]}>
 ```jsx
 import { useAuth } from "@clerk/nextjs";
-import { withServerSideAuth } from "@clerk/nextjs/ssr";
+import { withServerSideAuth } from "@clerk/nextjs";
 
 // SSR authentication context
 export const getServerSideProps = withServerSideAuth(
@@ -183,7 +183,7 @@ When working with backend code, Clerk provides middleware that can be used in Ne
 <CodeBlockTabs options={["Next.js", "Node"]}>
 ```jsx
 // pages/api/some-handler.js
-import { withAuth } from "@clerk/nextjs/api";
+import { withAuth } from "@clerk/nextjs";
 
 export default withAuth(async (req) => {
   // The request object is augmented with the 
