--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -78,12 +78,18 @@ CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
 
 To use the ClerkJS package, you'll need to initialize the Clerk class with your **Publishable key**.
 
+<Callout type="info">
+  Calling the `load()` method initializes ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
+</Callout>
+
+<InjectKeys>
+
 <CodeBlockTabs options={['npm Package', 'script Tag']}>
 ```js filename="index.js"
 import Clerk from '@clerk/clerk-js';
 
-const clerkFrontendApi = `{{pub_key}}`;
-const clerk = new Clerk(clerkFrontendApi);
+const clerkPublishableKey = `{{pub_key}}`;
+const clerk = new Clerk(clerkPublishableKey);
 await clerk.load({
   // Set load options here...
 });
@@ -91,12 +97,12 @@ await clerk.load({
 
 ```html filename="index.html"
 <script>
-  const clerkFrontendApi = `pk_{{pub_key}}`;
+  const clerkPublishableKey = `{{pub_key}}`;
   const frontendApi = '[your-domain].clerk.accounts.dev';
   const version = '@latest';
   const script = document.createElement('script');
   script.setAttribute('data-clerk-frontend-api', frontendApi);
-  script.setAttribute('data-clerk-publishable-key', clerkFrontendApi);
+  script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
   script.async = true;
   script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
@@ -111,6 +117,8 @@ await clerk.load({
 </script>
 ```
 </CodeBlockTabs>
+
+</InjectKeys>
 
 > You can configure the options for `Clerk.load` to change the behavior of ClerkJS. See the [ClerkJS reference documentation](/docs/references/javascript/clerk/clerk#load) for more information.
 
