--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -24,7 +24,7 @@ Retrieve the members of the currently active organization.
 | `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response. |
 
 <Callout type="danger">
-  `GetMembershipsParams` was recently updated to `GetMembersParams`. The `limit` and `offset` parameters are now deprecated.
+  `GetMembershipsParams` was updated to `GetMembersParams` in September, 2023. The `limit` and `offset` parameters are now deprecated.
 </Callout>
 
 
