--- a/docs/references/nextjs/with-clerk-middleware.mdx
+++ b/docs/references/nextjs/with-clerk-middleware.mdx
@@ -6,7 +6,7 @@ description: The withClerkMiddleware wrapper allows Clerk to access session data
 # `withClerkMiddleware()`
 
 <Callout type="danger">
-  `withClerkMiddleware()` is Clerk's previous middleware API and will soon be deprecated. Please use [`authMiddleware()`](/docs/references/nextjs/auth-middleware) going forward.
+  `withClerkMiddleware()` was deprecated and will be removed in the next major version (V5). Please use [`authMiddleware()`](/docs/references/nextjs/auth-middleware) going forward.
 </Callout>
 
 The `withClerkMiddleware` wrapper allows Clerk to access session data on the server side allowing you to use any of our server side helpers without any additonal network calls.
