--- a/docs/references/nodejs/token-verification.mdx
+++ b/docs/references/nodejs/token-verification.mdx
@@ -12,7 +12,7 @@ To learn more about Clerk's token verification, you can find more information on
 The value of the JWT verification key can also be added on the instance level or on any single middleware call e.g. for Next.js.
 
 ```js
-import { withAuth } from '@clerk/nextjs/api';
+import { withAuth } from '@clerk/nextjs';
 
 const handler = (req, res) => {
   // ...
@@ -43,7 +43,7 @@ app.use(ClerkExpressRequireAuth({ authorizedParties }));
 ```
 
 ```js
-import { requireAuth } from '@clerk/nextjs/api';
+import { requireAuth } from '@clerk/nextjs';
 
 const authorizedParties = ['http://localhost:3000', 'https://example.com']
 
