--- a/docs/references/ruby/overview.mdx
+++ b/docs/references/ruby/overview.mdx
@@ -116,7 +116,7 @@ Here's a list of all environment variables the SDK uses:
 | Variable name | Usage |
 | --- | --- |
 | `CLERK_API_BASE` | Overrides the default API base URL: `https://api.clerk.com/v1/` |
-| `CLERK_API_KEY` | The Secret key of your instance (required) |
+| `CLERK_SECRET_KEY` | The Secret key of your instance (required) |
 | `CLERK_SIGN_IN_URL` | Rails view helper: `clerk_sign_in_url` |
 | `CLERK_SIGN_IN_UP` | Rails view helper: `clerk_sign_up_url` |
 | `CLERK_USER_PROFILE_URL` | Rails view helper: `clerk_user_profile_url` |
