--- a/docs/testing/cypress.mdx
+++ b/docs/testing/cypress.mdx
@@ -137,7 +137,7 @@ You need to make some slight modifications to test in an SSR context. Because Cl
 Here's a simple SSR page, where the auth check is done on the server side, and returned to the frontend.
 
 ```jsx
-import { withServerSideAuth } from "@clerk/nextjs/ssr";
+import { withServerSideAuth } from "@clerk/nextjs";
 
 export const getServerSideProps = withServerSideAuth(async ({ req }) => {
   const { sessionId, getToken } = req.auth;
