--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -71,7 +71,7 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `username` | `string` | The user's username. |
-| `password` (deprecated) | `string` | The user's password.<br />This property is deprecated. This will be removed in the next major version. Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#update-password) instead. |
+| `password` (deprecated) | `string` | The user's password.<br />This property is deprecated. This will be removed in the next major version (V5). Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#update-password) instead. |
 | `firstName` | `string` | The user's first name. |
 | `lastName` | `string` | The user's last name. |
 | `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`][email-ref] that the user has set as primary. |
