add code examples on how to sign out of a session in a multisession app

--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -9,7 +9,9 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
 
 ## Usage
 
-#### Basic Usage
+### Basic usage
+
+The example below shows how to use the `<SignOutButton />` component. 
 
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
   <Tab>
@@ -88,7 +90,7 @@ The `<SignOutButton />` component is a button that signs a user out. By default,
   </Tab>
 </Tabs>
 
-#### Custom Usage
+### Custom usage
 
 You can create a custom button by wrapping your own button, or button text, in the `<SignOutButton />` component.
 
@@ -172,6 +174,101 @@ You can create a custom button by wrapping your own button, or button text, in t
           <SignOutButton>
             <button>Sign in with Clerk</button>
           </SignOutButton>
+        </div>
+      );
+    }
+    ```
+  </Tab>
+</Tabs>
+
+### Multi-session usage
+
+You can sign out of a specific session by passing in a `sessionId` to the `signOutOptions` prop. This is useful for multi-session applications.
+
+In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/references/react/use-auth) hook.
+
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+  <Tab>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
+      ```tsx filename="app/page.tsx"
+      "use client"
+      
+      import { SignInButton, SignOutButton, useAuth } from "@clerk/nextjs";
+
+      export default function Home() {
+        const { sessionId } = useAuth();
+
+        return (
+          <div>
+            <h1> Sign out </h1>
+            <SignOutButton signOutOptions={{ sessionId }} />
+          </div>
+        );
+      }
+      ```
+
+      ```tsx filename="pages/index.tsx"
+      import { SignInButton, SignOutButton, useAuth } from "@clerk/nextjs";
+
+      export default function Home() {
+        const { sessionId } = useAuth();
+
+        return (
+          <div>
+            <h1> Sign out </h1>
+            <SignOutButton signOutOptions={{ sessionId }} />
+          </div>
+        );
+      }
+      ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+    ```jsx filename="example.js"
+    import { SignInButton, SignOutButton, useAuth } from "@clerk/clerk-react";
+
+    export default function Home() {
+      const { sessionId } = useAuth();
+
+      return (
+        <div>
+          <h1> Sign out </h1>
+          <SignOutButton signOutOptions={{ sessionId }} />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx filename="pages/index.js"
+    import { SignInButton, SignOutButton, useAuth } from "@clerk/remix";
+
+    export default function Home() {
+      const { sessionId } = useAuth();
+
+      return (
+        <div>
+          <h1> Sign out </h1>
+          <SignOutButton signOutOptions={{ sessionId }} />
+        </div>
+      );
+    }
+    ```
+  </Tab>
+
+  <Tab>
+    ```jsx filename="pages/index.js"
+    import { SignInButton, SignOutButton, useAuth } from "gatsby-plugin-clerk";
+
+    export default function Home() {
+      const { sessionId } = useAuth();
+
+      return (
+        <div>
+          <h1> Sign out </h1>
+          <SignOutButton signOutOptions={{ sessionId }} />
         </div>
       );
     }
