--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -23,8 +23,8 @@ Retrieve the members of the currently active organization.
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
 | `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response. |
 
-<Callout type="info">
-  `GetMembershipsParams` was recently updated to `GetMembersParams`. The `limit` and `offset` parameters are now deprecated.
+<Callout type="danger">
+  `GetMembershipsParams` was updated to `GetMembersParams` in September, 2023. The `limit` and `offset` parameters are now deprecated.
 </Callout>
 
 
