--- a/docs/references/nextjs/with-clerk-middleware.mdx
+++ b/docs/references/nextjs/with-clerk-middleware.mdx
@@ -5,8 +5,8 @@ description: The withClerkMiddleware wrapper allows Clerk to access session data
 
 # `withClerkMiddleware()`
 
-<Callout type="warning">
-  `withClerkMiddleware()` is Clerk's previous middleware API and will soon be deprecated. Please use [`authMiddleware()`](/docs/references/nextjs/auth-middleware) going forward.
+<Callout type="danger">
+  `withClerkMiddleware()` was deprecated and will be removed in the next major version (V5). Please use [`authMiddleware()`](/docs/references/nextjs/auth-middleware) going forward.
 </Callout>
 
 The `withClerkMiddleware` wrapper allows Clerk to access session data on the server side allowing you to use any of our server side helpers without any additonal network calls.
