use tutorialhero component in quickstart header

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -3,9 +3,35 @@ title: Add authentication and user management to your Next.js app with Clerk in 
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
 ---
 
-<NextjsQuickstartHero />
-
-## Quickstart 
+<TutorialHero 
+  quickstart="nextjs"
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "https://clerk.com/docs/quickstarts/setup-clerk"
+    },
+    {
+      title: "Create a Next.js application",
+      link: "https://nextjs.org/docs/getting-started/installation"
+    }
+  ]}
+  exampleRepo={[
+    {
+      title: "App Router",
+      link: "https://github.com/clerkinc/clerk-nextjs-app-quickstart"
+    },
+    {
+      title: "Pages Router",
+      link: "https://github.com/clerkinc/clerk-nextjs-pages-quickstart"
+    }
+  ]}
+>
+- Install `@clerk/nextjs`
+- Set up your environment keys
+- Wrap your Next.js app in `<ClerkProvider/>`  
+- Limit access to authenticated users
+- Embed the `<UserButton/>`
+</TutorialHero>
 
 <Steps>
 
@@ -176,7 +202,7 @@ If you would like a repository that demonstrates many of the features Clerk has 
 - [Clerk + Next.js App Router Demo](https://github.com/clerk/clerk-nextjs-demo-app-router)
 - [Clerk + Next.js Pages Router Demo](https://github.com/clerk/clerk-nextjs-demo-pages-router)
 
-# Next steps
+## Next steps
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
