--- a/docs/references/nextjs/custom-signup-signin-pages.mdx
+++ b/docs/references/nextjs/custom-signup-signin-pages.mdx
@@ -37,7 +37,7 @@ Create a new file that will be used to render the sign-up page. In the file, imp
 
 ### Build your sign-in page
 
-Create a new file that will be used to render the sign-up page. In the file, import the [`<SignUp />`](/docs/components/authentication/sign-up) component from `@clerk/nextjs` and render it.
+Create a new file that will be used to render the sign-up page. In the file, import the [`<SignIn />`](/docs/components/authentication/sign-in) component from `@clerk/nextjs` and render it.
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
   ```tsx filename="app/sign-in/[[...sign-in]]/page.tsx"
